// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should not render organize button when editorState is not provided 1`] = `
<div
  class="makeStyles-root-10"
/>
`;

exports[`Toolbar should render all buttons when all features are enabled 1`] = `
<div
  class="makeStyles-root-3"
>
  <button
    title="Get file"
  >
    <div>
      "Get" popover
    </div>
  </button>
  <span
    class="MuiBadge-root"
  >
    <button
      title="Organize"
    >
      "Organize" popover
    </button>
    <span
      class="MuiBadge-badge makeStyles-badge-5 MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-invisible"
    >
      0
    </span>
  </span>
  <button>
    Assist
  </button>
</div>
`;

exports[`Toolbar should render buttons for enabled features: get, qurator 1`] = `
<div
  class="makeStyles-root-8"
>
  <button
    title="Get file"
  >
    <div>
      "Get" popover
    </div>
  </button>
  <button>
    Assist
  </button>
</div>
`;

exports[`Toolbar should render nothing when all features are disabled 1`] = `
<div
  class="makeStyles-root-6"
/>
`;

exports[`Toolbar should render skeleton buttons when features is null 1`] = `
<div
  class="makeStyles-root-1"
>
  <i>
    ⌛
  </i>
  <i>
    ⌛
  </i>
  <i>
    ⌛
  </i>
</div>
`;
